# Form-Pilot-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.docs/: custom_llm_api.md
.plan/: GenAI_Conversational_Form_Filling_System_Plan.md  TODO_Steps.md
.reference/: FULL_PROJECT_DOCUMENTATION.md
backend/: pyproject.toml  requirements.txt
backend/agent/: frontmatter.py  graph.py  llm_payloads.py  llm_provider.py  orchestrator.py  prompts.py  state.py  utils.py
backend/agent/nodes/: __init__.py  conversation.py  extraction.py  finalize.py  greeting.py  step_confirmation.py  tool_handler.py  validation.py
backend/api/: app.py  routes.py
backend/core/: actions.py  form_state.py  schema.py  session.py  utils.py  visibility.py
backend/schemas/: form_pilot_report_injury.md  incident_report.json  leave_request.json
backend/tests/: conftest.py  test_actions.py  test_api.py  test_api_e2e.py  test_boundary.py  test_bulk_extraction.py  test_e2e.py  test_form_state.py  test_llm_resilience.py  test_orchestrator.py  test_schema.py  test_visibility.py
docs/: action_protocol.md  api_reference.md  schema_guide.md
flutter_web/: pubspec.yaml
flutter_web/lib/: main.dart
flutter_web/lib/models/: ai_action.dart  form_schema.dart
flutter_web/lib/screens/: simulation_screen.dart
flutter_web/lib/services/: chat_service.dart  mock_tools.dart
flutter_web/lib/widgets/: chat_panel.dart  debug_panel.dart  dynamic_widget_panel.dart  schema_selector.dart
